--- a/LDA/Podfile
+++ b/LDA/Podfile
@@ -5,6 +5,7 @@ target 'LDA' do
     pod 'AFNetworking', '~> 2.6.3'
     pod 'MBProgressHUD', '~> 0.9.2'
     pod 'FLAnimatedImage', '~> 1.0'
+    pod 'IQKeyboardManager'
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
