New except key added in plist

--- a/LDA/LDA/Info.plist
+++ b/LDA/LDA/Info.plist
@@ -25,6 +25,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>roboto_black.ttf</string>
